<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userIndicator"
            type="vn.geekup.app.model.user.UserIndicatorModelV" />
    </data>

    <FrameLayout
        android:id="@+id/frParentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_user_indicator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYourIndicator"
                style="@style/TextAppearance.FontPath.Gilroy.Body_14_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/profile_your_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHide"
                style="@style/TextAppearance.FontPath.Gilroy.Body_14_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/hide"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_1"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@color/color_7"
                app:layout_constraintTop_toBottomOf="@id/tvYourIndicator" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnSparrowContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lnRangerContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vLine">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSparrow"
                    style="@style/TextAppearance.FontPath.Gilroy.Body_13_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile_sparrow"
                    android:textColor="@color/color_5" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lnSparrowPointContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSparrowPoint"
                        style="@style/TextAppearance.FontPath.Gilroy.H1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIndicator.sparrowPoints)}"
                        tools:text="50" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSparrowUnit"
                        style="@style/TextAppearance.FontPath.Gilroy.Body_14_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_pts" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSparrowGiveNow"
                    style="@style/TextAppearance.FontPath.Gilroy.Caption_12_Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/padding_16"
                    android:text="@string/profile_give_now"
                    android:textColor="@color/color_1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnRangerContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lnAliaContainer"
                app:layout_constraintStart_toEndOf="@id/lnSparrowContainer"
                app:layout_constraintTop_toBottomOf="@id/vLine">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRanger"
                    style="@style/TextAppearance.FontPath.Gilroy.Body_13_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile_the_ranger"
                    android:textColor="@color/color_5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRangerPoint"
                    style="@style/TextAppearance.FontPath.Gilroy.H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_6"
                    android:text="@{String.valueOf(userIndicator.rankingPoints)}"
                    tools:text="5000" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRangerSeeker"
                    style="@style/TextAppearance.FontPath.Gilroy.Caption_12_Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingVertical="@dimen/padding_16"
                    android:textColor="@color/color_5"
                    app:userNextRanger="@{userIndicator}"
                    tools:text="331 to The Seeker" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnAliaContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lnRangerContainer"
                app:layout_constraintTop_toBottomOf="@id/vLine">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAlia"
                    style="@style/TextAppearance.FontPath.Gilroy.Body_13_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile_alia"
                    android:textColor="@color/color_5" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lnAliaPointContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAliaPoint"
                        style="@style/TextAppearance.FontPath.Gilroy.H1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIndicator.aliaPoints)}"
                        tools:text="50" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAliaUnit"
                        style="@style/TextAppearance.FontPath.Gilroy.Body_14_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_pts" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAliaLearnMore"
                    style="@style/TextAppearance.FontPath.Gilroy.Caption_12_Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/padding_16"
                    android:text="@string/profile_learn_more"
                    android:textColor="@color/color_1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/vLineLeft"
                android:layout_width="@dimen/stroke_1"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/margin_16"
                android:background="@color/color_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lnRangerContainer"
                app:layout_constraintStart_toEndOf="@id/lnSparrowContainer"
                app:layout_constraintTop_toBottomOf="@id/vLine" />

            <View
                android:id="@+id/vLineRight"
                android:layout_width="@dimen/stroke_1"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/margin_16"
                android:background="@color/color_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lnAliaContainer"
                app:layout_constraintStart_toEndOf="@id/lnRangerContainer"
                app:layout_constraintTop_toBottomOf="@id/vLine" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
