<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="vn.geekup.app.module.calendar.CalendarBottomSheetDialogFragment" />
    </data>

    <FrameLayout
        android:id="@+id/frShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_navigation_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_bottom_navigation"
            android:backgroundTint="@color/color_bottom_sheet"
            android:paddingBottom="@dimen/padding_20">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearance.FontPath.Gilroy.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:paddingVertical="@dimen/padding_16"
                android:text="@string/calendar_select_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReset"
                style="@style/TextAppearance.FontPath.Gilroy.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25"
                android:paddingHorizontal="@dimen/padding_16"
                android:paddingVertical="@dimen/padding_16"
                android:text="@string/reset"
                android:onClick="@{() -> fragment.onClickReset()}"
                android:textColor="@color/color_1"
                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toEndOf="@id/tvTitle"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btnAllDays"-->
            <!--                style="@style/Widget.AppCompat.Button.Secondary_button"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_marginStart="@dimen/margin_25"-->
            <!--                android:layout_marginTop="@dimen/margin_20"-->
            <!--                android:paddingHorizontal="@dimen/padding_12"-->
            <!--                android:text="@string/calendar_all_days"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/tvTitle" />-->

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btnLastDay1"-->
            <!--                style="@style/Widget.AppCompat.Button.Secondary_button"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_marginStart="@dimen/margin_12"-->
            <!--                android:paddingHorizontal="@dimen/padding_12"-->
            <!--                android:text="@string/calendar_all_days"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintStart_toEndOf="@id/btnAllDays"-->
            <!--                app:layout_constraintTop_toTopOf="@id/btnAllDays" />-->

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btnLastDay2"-->
            <!--                style="@style/Widget.AppCompat.Button.Secondary_button"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_marginStart="@dimen/margin_12"-->
            <!--                android:paddingHorizontal="@dimen/padding_12"-->
            <!--                android:text="@string/calendar_all_days"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintStart_toEndOf="@id/btnLastDay1"-->
            <!--                app:layout_constraintTop_toTopOf="@id/btnAllDays" />-->

            <CalendarView
                android:id="@+id/vCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dateTextAppearance="@style/TextAppearance.FontPath.Gilroy.Date_Text_Calendar"
                android:theme="@style/TextAppearance.FontPath.Gilroy.Date_Text_Calendar"
                android:weekDayTextAppearance="@style/TextAppearance.FontPath.Gilroy.Week_Day_Calendar"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvClose"
                style="@style/TextAppearance.FontPath.Gilroy.Body_13_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.onClickClose()}"
                android:padding="@dimen/padding_16"
                android:text="@string/close"
                app:layout_constraintBottom_toBottomOf="@id/vCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vCalendar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>